<resources>
    <string name="app_name">Shopping App</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="find_discover_choose_and_buy_anything_online">Find, Discover, Choose and Buy everything online.</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="i_m_an_admin">Iam an Admin</string>
    <string name="login">Login</string>
    <string name="i_m_not_an_admin">Iam not an Admin</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="product_name">Product Name</string>
    <string name="congratulation_your_final_order_has_been_placed_successfully_it_will_be_verified_soon">Congratulation Your final order has been placed Successfully. It will be verified soon.</string>
    <string name="next">Next</string>
    <string name="total_0">Total = 0</string>
    <string name="title_activity_seller_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
</resources>